--- a/src/App.css
+++ b/src/App.css
@@ -176,3 +176,12 @@
     @apply bg-background text-foreground;
   }
 }
+
+html,
+body {
+  /* Prevent rubber banding on scroll */
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+  border-radius: 10px;
+}
